<resources>
    <string name="app_name">taskapp</string>
    <string name="action_settings">Settings</string>
    <string name="unchecked_button_desc">Empty, unfilled circle.</string>
    <string name="events">Events</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="ecd">Earliest Completion Date</string>
    <string name="due_date">Due Date</string>
    <string name="ttc">Completion Time (min.)</string>
    <string name="length">Length (in minutes)</string>
    <string name="start_time">Start Time</string>
    <string name="event_name">Event Name</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="optimizing">Optimizing…</string>
    <string name="complete_dialog_message">How long (in minutes) did the task take to complete?</string>
    <string name="complete_dialog_title">Complete Task</string>
    <string name="parents_button">Complete After</string>
    <string name="ecd_help_text_format">Start times are formatted as MM/DD/YY HH:MM AM/PM.</string>
    <string name="ttc_error_empty">Make sure to enter an estimated completion time for the event.</string>
    <string name="ttc_error_empty_task">Make sure to enter an estimated completion time for the task.</string>
    <string name="name_error_event">Make sure to enter a name for the event.</string>
    <string name="ecd_empty_event">Make sure to enter the start time for the event.</string>
    <string name="ecd_format_event">Make sure start time is today or later.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="ttc_format_event">Make sure to enter a whole number (in minutes) for completion time.</string>
    <string name="recur_format_event">Make sure to enter a whole number for the number of %s between recurrences.</string>
    <string name="complete_task">Complete Task</string>
    <string name="schedule_for">%s\n%d minutes</string>
    <string name="minutes_to_complete">%d Minutes</string>
    <string name="ok">OK</string>
    <string name="name_empty_task">Make sure to enter a name for the task.</string>
    <string name="ecd_empty_task">Make sure to enter an earliest completion date for the task.</string>
    <string name="ecd_early_task">Make sure earliest completion date is today or later.</string>
    <string name="date_format_task">Make sure dates are formatted MM/DD/YY</string>
    <string name="due_empty_task">Make sure to enter a due date for the task.</string>
    <string name="due_before_task">Make sure due date is on or after earliest completion date.</string>
    <string name="due_when">%s (Due %s)</string>
    <string name="overdue_dialog_title">Check if overdue task was completed</string>
    <string name="overdue_dialog_button">Mark selections as complete</string>
    <string name="desc_delete_button">Trash can</string>
    <string name="reoccur_header">Pick Recurrence Interval:</string>
    <string name="no_recur">Don\'t Recur</string>
    <string name="daily_recur">Recur Every Day</string>
    <string name="weekly_recur">Recur Every Week</string>
    <string name="monthly_recur">Recur Every Month</string>
    <string name="yearly_recur">Recur Every Year</string>
    <string name="daily_recur_prompt">Recur every _ days:</string>
    <string name="sunday_initial">S</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="monthly_recur_prompt">Months between recurrences:</string>
    <string name="recur_days_hint">1,2,3</string>
    <string name="years_recur_prompt">Years between recurrences:</string>
    <string name="months_recur_prompt">Months to recur on:</string>
    <string name="recur_months_hint">Jan,Feb,Mar</string>
    <string name="weekly_recur_prompt">Recur every _ weeks:</string>
    <string name="recur_button">Recur</string>
    <string name="recur_on_the">Recur on the %s</string>
    <string name="recur_specific">Recur Specific Days</string>
    <string name="recur_specific_days_months">Recur specific months on specific days</string>
    <string name="recur_specific_months">Recur specific months on the %s</string>
    <string name="recur_on">Recur on %s %s</string>
    <string name="recur_on_of">Recur on the %s of %s</string>
    <string name="recur_times">Recur _ times</string>
    <string name="recur_until">Recur until</string>
    <string name="days">days</string>
    <string name="no_day_selected">Make sure to choose at least one day to recur on.</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="no_days">Make sure to enter a list of days to recur on</string>
    <string name="date_list_format">Make sure dates formatted as \"1,2,3\"</string>
    <string name="months_format">Make sure to enter months in format \"Jan,Feb,Mar\"</string>
    <string name="no_items">You have no tasks or events scheduled.\nWhy don\'t you add one using the plus button?</string>
    <string name="empty_icon_desc">A calendar with a pencil in front of it.</string>
    <string name="add_task">Add Task</string>
    <string name="add_event">Add Event</string>
    <string name="set_recur_interval">Set Recurrence Interval</string>
    <string name="generic_date">%d/%d/%d</string>
    <string name="two_words">%s %s</string>
    <string name="submit">Submit</string>
    <string name="info_button">info</string>
    <string name="plus">plus</string>
    <string name="event_ecd_info">This is the time and date this event starts at.</string>
    <string name="event_length_info">This is how long the event should last (how many minutes between the start and end of the event).</string>
    <string name="task_ecd_info">This is the earliest date you can complete this task. For instance, if you can\'t complete this task until after a specific meeting, put the date of that meeting.</string>
    <string name="task_dd_info">This is the latest date this task can be scheduled for. If this task is due by a specific date, set this to that date.</string>
    <string name="task_ttc_info">This is your best estimate on how long the task will take to complete. It doesn\'t have to be perfect, a rough estimate is good enough for the algorithm, although the more precise, the better the schedule.</string>
    <string name="work_ahead_desc">(%d minutes, due %s)</string>
    <string name="end_time">End Time</string>
    <string name="enter_end_time">Make sure to enter an end time for the event</string>
    <string name="task_recur_button">Change how often this task recurs</string>
    <string name="ecd_reminder">Make sure to enter an start date</string>
    <string name="hourglass">Hourglass</string>
    <string name="underline"><u>%s</u></string>
    <string name="timer_prompt">Your timer said the task took %d minutes to complete. Would you like to accept this or enter your own time?</string>
    <string name="work_ahead">Work Ahead</string>
    <string name="priority">Priority:</string>
    <string name="priority_info">How important a task is. Leftmost is lowest priority, rightmost is highest priority.</string>
    <string name="project_name">Project Name</string>
    <string name="default_color">Color: Gray</string>
    <string name="project_goal">Project Goal</string>
    <string name="pale_blue">Pale Blue</string>
    <string name="blue">Blue</string>
    <string name="pale_green">Pale Green</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="pale_orange">Pale Orange</string>
    <string name="orange">Orange</string>
    <string name="lavender">Lavender</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="select">Select</string>
    <string name="name_reminder">Make sure to enter a name.</string>
    <string name="goal_reminder">Make sure to enter a goal.</string>
    <string name="title_activity_project_entry">ProjectEntry</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="colorLabel">Color:\ </string>
    <string name="project_spinner_default">No Project</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="right_arrow">Right arrow</string>
    <string name="projects">Projects</string>
    <string name="add_labels">Choose Labels</string>
    <string name="label_name">Label Name</string>
    <string name="pick_label_color">Pick Label Color</string>
    <string name="pick_labels">Pick Labels for Task</string>
    <string name="search">Search</string>
    <string name="start_date_label">Start Date:\nNone Chosen</string>
    <string name="start_date_replace">Start Date:\n%s</string>
    <string name="end_date_label">End Date:\nNone Chosen</string>
    <string name="end_date_replace">End Date:\n%s</string>
    <string name="project_label">Project:\nNone Chosen</string>
    <string name="project_replace">Project:\n%s</string>
    <string name="label_label">Labels:\nNone Chosen</string>
    <string name="label_replace">Labels:\n%d Chosen</string>
    <string name="label_format">Labels:\n%s Chosen</string>
    <string name="min_priority">Minimum Priority</string>
    <string name="start_date">Start Date</string>
    <string name="pick_project">Pick Project</string>
    <string name="none_chosen">None Chosen</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_task">Edit Task</string>
    <string name="enter_start_time">Please enter a start time first.</string>
    <string name="early_date_default">Early Date:\nNone Chosen</string>
    <string name="due_date_default">Due Date:\nNone Chosen</string>
    <string name="recur">Recur</string>
    <string name="start_time_default">Start Time:\nNone Chosen</string>
    <string name="end_time_default">End Time:\nNone Chosen</string>
    <string name="labels">Labels</string>
</resources>