<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.evanv.taskapp.ui.main.mainactivity">
    <item
        android:id="@+id/action_projects"
        android:orderInCategory="100"
        android:title="@string/projects"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_labels"
        android:orderInCategory="101"
        android:title="@string/labels"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="102"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_work_ahead"
        android:orderInCategory="103"
        android:title="@string/work_ahead"
        app:showAsAction="never" />
</menu>