<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:gravity="end"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4">

        <ImageButton
            android:id="@+id/paleBlueButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/pale_blue"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/pale_blue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/blueButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/blue"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/blue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/paleGreenButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/pale_green"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/pale_green"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/greenButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/green"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/green"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/pinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/pink"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/pink"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/redButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/red"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/red"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/paleOrangeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/pale_orange"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/pale_orange"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/orangeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/orange"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/orange"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/lavenderButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/lavender"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/lavender"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/purpleButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/purple"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/purple"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/yellowButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/yellow"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/yellow"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/grayButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/gray"
            android:src="@drawable/ic_select_color_24"
            app:tint="@color/gray"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectButton"
        android:text="@string/select" />


</LinearLayout>