<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.additem.recur.WeeklyRecurFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weeklySubheader"
            android:labelFor="@id/weeksBetween"
            style="@style/subheader"
            android:text="@string/weekly_recur_prompt"/>
        <EditText
            android:id="@+id/weeksBetween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:inputType="number"
            android:text="1"
            android:textSize="@dimen/subheader_height"
            tools:ignore="HardcodedText,SpUsage"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/sundayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday_initial"/>
        <CheckBox
            android:id="@+id/mondayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday_initial"/>
        <CheckBox
            android:id="@+id/tuesdayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday_initial"/>
        <CheckBox
            android:id="@+id/wednesdayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday_initial"/>
        <CheckBox
            android:id="@+id/thursdayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday_initial"/>
        <CheckBox
            android:id="@+id/fridayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday_initial"/>
        <CheckBox
            android:id="@+id/saturdayCheckBox"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday_initial"/>
    </LinearLayout>

</LinearLayout>