<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.additem.recur.YearlyRecurFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:labelFor="@id/yearsBetween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subheader"
            android:text="@string/years_recur_prompt"/>
        <EditText
            android:id="@+id/yearsBetween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:inputType="number"
            android:text="1"
            android:textSize="@dimen/subheader_height"
            tools:ignore="HardcodedText,SpUsage"
            android:importantForAutofill="no" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearlyRadioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/radioButtonStatic"
            tools:ignore="HardcodedText" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonDynamic"
            tools:ignore="HardcodedText" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMultipleStatic"
            tools:ignore="HardcodedText" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMultipleDynamic"
            tools:ignore="HardcodedText" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recur_specific_days_months"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/recurMonthsLayout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subheader"
            android:text="@string/months_recur_prompt"/>
        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/recurMonthsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:hint="@string/recur_months_hint"
            android:textSize="@dimen/subheader_height"
            tools:ignore="SpUsage"
            android:importantForAutofill="no" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/recurDaysLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subheader"
            android:text="Days to recur on: "
            tools:ignore="HardcodedText" />
        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/recurDaysEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:hint="@string/recur_days_hint"
            android:textSize="@dimen/subheader_height"
            tools:ignore="SpUsage"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>