<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.additem.EventEntry"
    android:orientation="vertical">


    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTextEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textShortMessage"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <TextView
                android:id="@+id/startDateLabel"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:lineSpacingExtra="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:drawableStartCompat="@drawable/ic_baseline_edit_calendar_48"
                android:drawablePadding="6dp"
                app:drawableTint="@color/text_primary"
                android:text="@string/start_time_default"/>
            <TextView
                android:id="@+id/endDateLabel"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:lineSpacingExtra="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:drawableStartCompat="@drawable/ic_baseline_edit_calendar_48"
                android:drawablePadding="6dp"
                app:drawableTint="@color/text_primary"
                android:text="@string/end_time_default" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/submit"
            android:id="@+id/submitButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recur"
            android:id="@+id/recurButton"/>
        <LinearLayout
            android:gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/helpButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_help_24"
                android:background="@null"
                android:contentDescription="@string/question_mark"
                app:tint="@color/text_primary"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
